added CSS to project

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="style.css" >
+    
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -13,7 +16,6 @@
     </header>
     <main>
       <section class="card" id="html-section">
-        class="card" id="html-section">
      <h2>HTML</h2>
      <ul>
        <li>Enter your HTML notes here</li>
@@ -29,7 +31,10 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
      <ul>
-       <li>Enter your CSS notes here</li>
+       <li>"class" groups sections in to different design characteristics, in this case "card" is used as a design format for seperation later used by CSS stylesheet </li>
+       <li>A margin indicates how much space we want around the outside of an element.</li>
+       <li>A padding indicates how much space we want around the content inside an element.</li>
+       <li>If CSS and HTML file is in same folder, specify the CSS file directly and ignore folder.</li>
      </ul>
    
       </section>
@@ -54,7 +59,7 @@
     </main>
 
     <footer>
-      <p>I can code! yessss siiiiiirrr</p>
+      <p>Copyright 2022 Ivan Gyimah</p>
     </footer>
   </body>
 </html>
