--- a/assets/index.html
+++ b/assets/index.html
@@ -13,6 +13,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="https://courses.bootcampspot.com/courses/3093/files/2156212/preview"Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -61,5 +62,6 @@
     <footer>
       <p>Copyright 2022 Ivan Gyimah</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
