--- a/assets/index.html
+++ b/assets/index.html
@@ -54,6 +54,10 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+   <li>Control flow is the order in which a computer executes code in a script.</li>
+   <li>var is a variable infromation to be stored inside of a container</li>
+   <li>topic sets the focus of Javascript code to focus on - this will be the set point of the variable</li>
         </ul>
    
       </section>
